Added Calorie Calculator, Welcome Screen, Recipes and screenshots

--- a/BMIcalculator/app/src/main/AndroidManifest.xml
+++ b/BMIcalculator/app/src/main/AndroidManifest.xml
@@ -9,14 +9,25 @@
         android:theme="@style/AppTheme">
 
         <activity
-            android:name=".MainActivity"
+            android:name=".WelcomeActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:name=".MainActivity"
+            android:exported="true" />
+        <activity
+            android:name=".HomeActivity"
+            android:exported="true" />
+        <activity
+            android:name=".CalorieCalculatorActivity"
+            android:exported="true" />
+        <activity
+            android:name=".RecipeActivity"
+            android:exported="true" />
     </application>
 
 </manifest>
