Added Shoppinglist functionallity, BMI history chart and 12 Kotlin exercises (Main.kt)

--- a/BMIcalculator/app/src/main/AndroidManifest.xml
+++ b/BMIcalculator/app/src/main/AndroidManifest.xml
@@ -28,6 +28,12 @@
         <activity
             android:name=".RecipeActivity"
             android:exported="true" />
+        <activity
+            android:name=".ShoppingActivity"
+            android:exported="true" />
+        <activity
+            android:name=".BmiHistoryActivity"
+            android:exported="true" />
     </application>
 
 </manifest>
